# kdiff3_extractLogic

./: .gitignore  CMakeLists.txt  README  README.md
src/: CMakeLists.txt  CommentParser.cpp  CvsIgnoreList.h  DefaultFileAccessJobHandler.cpp  DirectoryInfo.h  FileAccessJobHandler.h  FileNameLineEdit.cpp  FileNameLineEdit.h  IgnoreList.h  MergeEditLine.h  MergeFileInfos.cpp  MergeFileInfos.h  Options.cpp  Overview.cpp  Overview.h  ProgressProxyExtender.h  SourceData.cpp  Utils.cpp  WindowTitleWidget.cpp  WindowTitleWidget.h  difftextwindow.cpp  difftextwindow.h  directorymergewindow.cpp  directorymergewindow.h  fileaccess.cpp  gnudiff_diff.h  guiutils.h  ignorelist.cpp  kdiff3.cpp  kdiff3.h  kdiff3_part.cpp  kdiff3_shell.cpp  main.cpp  merger.h  mergeresultwindow.h  optiondialog.cpp  optiondialog.h  pdiff.cpp  progress.cpp  selection.cpp  (+3 more)
src/EXTRACT/: README.md
src/EXTRACT/0_consider/: InitFlags.h
src/EXTRACT/0_consider/ui/: KDiff3App_kdiff3.cpp  KDiff3App_kdiff3.h  KDiff3App_pdiff.cpp  MergeResultWindow.cpp  MergeResultWindow.h  ReversibleScrollBar.cpp  ReversibleScrollBar.h
src/EXTRACT/1_transitional/: CommentParser.cpp  DefaultFileAccessJobHandler.cpp  DefaultFileAccessJobHandler.h  Options.cpp  SourceData.cpp  SourceData.h  Utils.cpp  diff.cpp  diff.h  fileaccess.cpp
src/EXTRACT/1_transitional/file_access/: CvsIgnoreList.h  DefaultFileAccessJobHandler.cpp  DefaultFileAccessJobHandler.h  fileaccess.cpp  ignorelist.cpp
src/EXTRACT/1_transitional/gnudiff/: gnudiff_analyze.cpp  gnudiff_diff.h  gnudiff_io.cpp  gnudiff_xmalloc.cpp
src/EXTRACT/1_transitional/utils/: Utils.cpp  Utils_urlToString.cpp  Utils_urlToString.h
src/EXTRACT/2_final/: CommentParser.cpp  ConfigValueMap.h  LineRef.h  Logging.cpp  MergeEditLine.cpp  MergeEditLine.h  OptionItems.h  Options.cpp  SourceData.cpp  SourceData.h  common.cpp  diff.cpp  diff.h  options.h
src/EXTRACT/2_final/file_access/: CvsIgnoreList.h  DefaultFileAccessJobHandler.cpp  DefaultFileAccessJobHandler.h  FileAccessJobHandler.h  IgnoreList.h  fileaccess.cpp  ignorelist.cpp
src/EXTRACT/2_final/gnudiff/: gnudiff_analyze.cpp  gnudiff_io.cpp  gnudiff_xmalloc.cpp
src/EXTRACT/2_final/ui/: ProgressProxyExtender.cpp  progress.cpp
src/EXTRACT/2_final/utils/: Utils.cpp  Utils.h  Utils_urlToString.cpp
src/EXTRACT/my/: MainDataObj.cpp  MainDataObj.h  MergeDataObj.cpp  MergeDataObj.h  MyOptions.cpp  MyOptions.h  NewMresw.cpp  NewMresw.h
src/icons/: CMakeLists.txt
